# TinyNyok

./: CMakeLists.txt  README.md  todo.md
include/: forward_mode.h  reverse_mode.h
src/: forward_mode.cpp  reverse_mode.cpp
test/: CMakeLists.txt  NyokTest.cpp
